--- a/email-validation-check/index.html
+++ b/email-validation-check/index.html
@@ -10,16 +10,36 @@
   <h3>Email Validation Check</h3>
   <form action="#" id="form">
     <div class="inputBox">
-      <input type="text" name="" id="email" placeholder="Enter Email Address">
-      <span id="text"></span>
+      <input type="text" name="" id="email" placeholder="Enter Email Address" onkeydown="validation()">
+      <p id="text"></p>
     </div>
 
     <script type="text/javascript">
       function validation()
       {
         let form = document.getElementById("form");
-        let email = document.getElementById("email");
+        let email = document.getElementById("email").value;
         let text = document.getElementById("text");
+        let pattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
+
+        if (email.match(pattern)) {
+          form.classList.add("valid");
+          form.classList.remove("invalid");
+          text.innerHTML = "Your email address is valid.";
+          text.style.color = "#00ff00"
+        } else {
+          form.classList.remove("valid");
+          form.classList.add("invalid");
+          text.innerHTML = "Please enter a valid email address.";
+          text.style.color = "#ff0000"
+        }
+
+        if (email === "") {
+          form.classList.remove("valid");
+          form.classList.remove("invalid");
+          text.innerHTML = "";
+          text.style.color = "#00ff00";
+        }
       }
     </script>
   </form>
